2006-04-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* font-mgr.c (string_list_to_fcobjectset): Remove debugging output.

2006-04-29  Aidan Kehoe  <kehoea@parhasard.net>

	* doc.c:
	* doc.c (extract_object_file_name):
	* doc.c (get_object_file_name):
	* doc.c (Fbuilt_in_symbol_file):
	Support saving and recovering the source file name of a built-in
	symbol (that is, one created in C.) 
	
2006-04-29  Aidan Kehoe  <kehoea@parhasard.net>

	* lread.c:
	* lread.c (read_escape):
	Support \uABCD and \U00ABCDEF for specifying characters by their
	Unicode code point. 
	
2006-04-25  Stephen J. Turnbull  <stephen@xemacs.org>

	Repair busted commit, plus some gratuitous doc improvements.

	* emacs.c (main_1): Initialize display_use to NULL for clarity.

	* objects-x.c (x_color_list):
	(x_initialize_font_instance):
	(x_font_instance_truename):
	(x_find_charset_font):
	* font-mgr.h (Qfc_font_name_encoding):
	Qxft_font_name_encoding -> Qfc_font_name_encoding.

	* console.h (header comment):
	* font-mgr.c (vars_of_font_mgr):
	* redisplay.c (Vwindow_system):
	Improve comments.

2006-04-22  Jerry James  <james@xemacs.org>

	* event-stream.c (copy_command_builder): Also copy the console.

2006-04-23  Aidan Kehoe  <kehoea@parhasard.net>

	* alloc.c:
	* data.c:
	* data.c (Fconsp):
	* data.c (Flistp):
	Take on board feedback from Stephen on my last change; move the
	explanation of what a cons is to the cons docstring, add cross
	references to that from the consp and atomp docstrings. 
	
2006-04-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* Makefile.in.in (x_objs): Change xft-fonts.o to font-mgr.o.

2006-04-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* config.h.in: New symbol HAVE_FONTCONFIG.

2006-04-22  Stephen J. Turnbull  <stephen@xemacs.org>

	Rename xft-fonts.{c,h} to font-mgr.{c,h}.

	* font-mgr.c:
	* emacs.c:
	* symsinit.h:
	(syms_of_font_mgr):
	(vars_of_font_mgr):
	(reinit_vars_of_font_mgr):
	(complex_vars_of_font_mgr):
	Renamed from *_xft_fonts versions.
